<resources>
    <string name="app_name">Pacitanku</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="daftar">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_fail">Email or password is invalid</string>
    <string name="empty_login">Email or password must not be empty!</string>
    <string name="update_fail">Failed update user data</string>
    <string name="register_fail">Failed register new user</string>
    <string name="empty_register">Please fill all register form</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="event">Event</string>
    <string name="event_list">Event List</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="detail">Detail</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="confirm_delete">Are you sure want delete this?</string>
    <string name="confirm_delete_message">This will be delete permanently</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="no_delete">No</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="image">Image</string>
    <string name="event_image">Upload Image</string>
    <string name="event_reminder">Reminder</string>
    <string name="reminder">Reminder</string>
    <string name="event_description">Description</string>
    <string name="set_event">Save</string>
    <string name="event_name_example">Example : pacitan is ...</string>
    <string name="event_time_example">Example : 14:32</string>
    <string name="event_image_example">Format :  jpg/jpeg/png</string>
    <string name="title_add_event">Add New Event</string>
    <string name="title_edit_event">Edit Event</string>
    <string name="add_event">Add Event</string>
    <string name="save_event">Save Event</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="empty_event_data">Please Fill all empty form</string>
    <string name="file_choosed">File choosed</string>
    <string name="notif_push">Notification pushed!</string>
    <string name="foreground_notification_message">Pacitanku Service is running...</string>
    <string name="event_date_example">Example : 03/10/2020</string>
    <string name="sending">Mengirim...</string>
</resources>