<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.event.EventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_imageview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|left"
            android:layout_marginLeft="20dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/event_name"
                        android:textColor="@color/colorDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/event_name_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:padding="5dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_shape_gray_min"
                        android:ems="10"
                        android:hint="@string/event_name_example"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/colorGrey" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/event_date"
                        android:textColor="@color/colorDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/date_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/rounded_shape_gray_min"
                            android:ems="10"
                            android:enabled="false"
                            android:hint="@string/event_date_example"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/colorGrey" />

                        <ImageView
                            android:id="@+id/date_picker_imagview"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/rounded_shape_gray_min"
                            android:scaleType="center"
                            app:srcCompat="@drawable/ic_calendar" />

                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/event_time"
                        android:textColor="@color/colorDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/timer_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:enabled="false"
                            android:padding="5dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/rounded_shape_gray_min"
                            android:ems="10"
                            android:hint="@string/event_time_example"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/colorGrey" />

                        <ImageView
                            android:id="@+id/time_picker_imageview"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/rounded_shape_gray_min"
                            android:scaleType="center"
                            app:srcCompat="@drawable/ic_time" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/location"
                        android:textColor="@color/colorDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/location_picker_cardview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="5dp">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/map" />

                            <com.google.android.material.floatingactionbutton.FloatingActionButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right|bottom"
                                android:layout_margin="10dp"
                                android:clickable="false"
                                android:src="@drawable/ic_send" />

                        </FrameLayout>

                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/image"
                        android:textColor="@color/colorDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/upload_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:enabled="false"
                            android:padding="5dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/rounded_shape_gray_min"
                            android:ems="10"
                            android:hint="@string/event_image_example"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/colorGrey" />

                        <ImageView
                            android:id="@+id/iupload_picker_imageview"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/rounded_shape_gray_min"
                            android:scaleType="center"
                            app:srcCompat="@drawable/ic_upload" />

                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/reminder"
                        android:textColor="@color/colorDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/reminder_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:layout_margin="10dp"
                            android:padding="5dp"
                            android:background="@drawable/rounded_shape_gray_min"
                            android:ems="10"
                            android:enabled="false"
                            android:hint="@string/event_date_example"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/colorGrey" />

                        <ImageView
                            android:id="@+id/reminder_picker_imageview"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/rounded_shape_gray_min"
                            android:scaleType="center"
                            app:srcCompat="@drawable/ic_calendar" />

                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/event_description"
                        android:textColor="@color/colorDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/description_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:background="@drawable/rounded_shape_gray_min"
                        android:ems="10"
                        android:gravity="top|left"
                        android:hint="@string/event_description"
                        android:inputType="text"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/colorGrey" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/rounded_shape_accent"
                android:text="@string/set_event"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
